--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: #000;
   background-color: #242424;
 
   font-synthesis: none;
@@ -36,7 +37,7 @@ body {
     #332757
   );
 
-  color: #fff;
+  color: #000;
   min-height: 100vh;
   margin: 0;
   padding: 0;
@@ -102,7 +103,7 @@ body.dark-mode {
     #1e2b51,
     #332757
   );
-  color: #fff;
+  color: #000;
 }
 
 /* lightmode */
